# Mount_Prj

Mount_Sys/: CMakeLists.txt  make_debug.txt
Mount_Sys/leader/: CMakeLists.txt
Mount_Sys/leader/include/: mot_commu_ipc.h  mot_leader.h  mot_leader_defs.h  mot_master.h  mot_master_chassis.h  mot_master_magic.h  mot_master_serial.h
Mount_Sys/leader/src/: main.c  mot_commu_ipc.c  mot_leader.c  mot_master.c  mot_master_chassis.c  mot_master_magic.c  mot_master_serial.c
Mount_Sys/share/: list.h  mot_ctl.c  mot_ctl.h  mot_share_conf.h  mot_share_daemon.c  mot_share_daemon.h  mot_share_defs.h  mot_share_ipc.c  mot_share_ipc.h  mot_share_messages.h
Mount_Sys/supr/: CMakeLists.txt
Mount_Sys/supr/include/: mot_supr.h  mot_upper_listener.h
Mount_Sys/supr/src/: main.c  mot_supr.c  mot_upper_listener.c
sysEthcProject/: CMakeLists.txt  README.md
sysEthcProject/leader/: CMakeLists.txt
sysEthcProject/leader/include/: sys_commu_ipc.h  sys_db.h  sys_leader.h  sys_leader_defs.h  sys_master.h  sys_master_chassis.h  sys_master_magic.h  sys_master_serial.h  sys_master_vision.h
sysEthcProject/leader/src/: main.c  sys_commu_ipc.c  sys_db.c  sys_leader.c  sys_master.c  sys_master_chassis.c  sys_master_magic.c  sys_master_serial.c  sys_master_vision.c
sysEthcProject/supr/: CMakeLists.txt
sysEthcProject/supr/include/: sys_db_worker.h  sys_logger.h  sys_supr.h  sys_upper_listener.h
sysEthcProject/supr/src/: main.c  sys_db_worker.c  sys_logger.c  sys_supr.c  sys_upper_listener.c
sysEthcProject/sys_share/: sys_ctl.c  sys_ctl.h  sys_globals.c  sys_share_conf.h  sys_share_daemon.c  sys_share_daemon.h  sys_share_defs.h  sys_share_ipc.c  sys_share_ipc.h  sys_share_messages.h
